# dm-water-consumption

./: .pre-commit-config.yaml  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: dm-water-consump-ci.yml
src/: config.py  database.py  main.py  models.py  tests.py  utils.py  worker.py
